pydio/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pydio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pydio
  template:
    metadata:
      labels:
        app: pydio
    spec:
      containers:
      - name: pydio
        image: ghcr.io/pmh-only/pydio
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /var/cells
          name: pydio-storage
      volumes:
      - name: pydio-storage
        persistentVolumeClaim:
          claimName: pydio-pvc
