pydio/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pydio-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - drive.juwon.codes
    secretName: pydio-ingress-tls
  ingressClassName: nginx
  rules:
  - host: drive.juwon.codes
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pydio-service
            port:
              number: 8080
